--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,16 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <form action="/" method="post" enctype="multipart/form-data">
+      <input type="text" name="title">
+      <input type="file" name="photo">
+      <button>Create Post</button>
+    </form>
+    <% if (posts) { %>
+      <% posts.forEach(post => { %>
+        <h3><%= post.title %></h3>
+        <img src="<%= post.imageUrl %>" alt="">
+      <% }); %>
+    <% } %>
   </body>
 </html>
